syntax = "proto3";

package Greeter;

service GreeterService {
  
  // 'GetFeature' rpc performs the following operations on the 'req' message fields:
  // 1) Increments req_latitude by 1 and saves in res_latitude of 'res' message.
  // 2) Increments req_id of req_oneof by 1 and saves in res_oneof's res_id field of 'res' message. 
  // 3) Appends '_response' to the req_name field of req_oneof and save in res_name field of res_oneof of 'res' message.
  // 4) Appends '_response' to the data_a1 field of message_a field and saves in corresponding message_a field of 'res' message.
  rpc GetFeature(req) returns (res) {}
}

message res {
  int32 res_latitude = 1;
  oneof res_oneof {
    int32 res_id = 2;
    string res_name = 3;
  }
  MessageA message_a = 4;
}

message req {
  int32 req_latitude = 1;
  MessageA message_a = 2;
  oneof req_oneof {
    int32 req_id = 3;
    string req_name = 4;
  }  
}

message MessageA {
  string data_a1 = 1;
}